--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angular-font-awesome": "^3.1.2",
+    "angular-lint": "0.0.2",
     "bootstrap": "^4.1.1",
     "bootstrap4": "0.0.1-security",
     "core-js": "^2.5.4",
