--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@angular/router": "^6.0.3",
     "angular-font-awesome": "^3.1.2",
     "angular-lint": "0.0.2",
-    "bootstrap": "^4.1.1",
     "bootstrap4": "0.0.1-security",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
     "popper.js": "^1.14.3",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "bootstrap": "^4.1.1",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
