--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.5",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
+    "@angular/core": "^6.1.2",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.1.2",
     "@angular/router": "^6.0.3",
     "@types/uuid": "^3.4.3",
     "angular-font-awesome": "^3.1.2",
@@ -33,11 +35,12 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "tslib": "^1.9.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
+    "@angular/cli": "^6.1.3",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
