--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.1.2",
     "@angular/router": "^6.0.3",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^5.2.0",
     "@types/uuid": "^3.4.3",
     "angular-font-awesome": "^3.1.2",
