added stor for course-page

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.1.2",
     "@angular/router": "^6.0.3",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^6.1.0",
-    "@ngrx/store": "^5.2.0",
-    "@ngrx/store-devtools": "^3.2.4",
+    "@ngrx/effects": "6.1.0",
+    "@ngrx/entity": "6.1.0",
+    "@ngrx/store": "6.1.0",
+    "@ngrx/store-devtools": "6.1.0",
     "@types/uuid": "^3.4.3",
     "angular-font-awesome": "^3.1.2",
     "angular-lint": "0.0.2",
