--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
     "json-server": "^0.14.0",
+    "ng4-tag-input": "^1.0.5",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
@@ -64,6 +65,6 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "webpack": "^4.12.0"
+    "webpack": "^4.17.1"
   }
 }
