--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.1.2",
+    "@angular/core": "^6.1.4",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.1.2",
     "@angular/router": "^6.0.3",
+    "@material/form-field": "^0.39.0",
     "@ngrx/effects": "6.1.0",
     "@ngrx/entity": "6.1.0",
     "@ngrx/store": "6.1.0",
@@ -31,12 +32,14 @@
     "angular-font-awesome": "^3.1.2",
     "angular-lint": "0.0.2",
     "angular2-jwt": "^0.2.3",
+    "angular2-material-chips": "^1.0.5",
     "bootstrap4": "0.0.1-security",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
     "json-server": "^0.14.0",
-    "ng4-tag-input": "^1.0.5",
+    "material-icons": "^0.2.3",
+    "ngx-tags-input": "^1.1.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
